--- a/sources/back-end/libs/LibWebsocketServer/package.json
+++ b/sources/back-end/libs/LibWebsocketServer/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-chai-friendly": "^0.7.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
+    "execa": "^6.1.0",
     "mocha": "^10.0.0",
     "mocha-lcov-reporter": "^1.3.0",
     "ws": "^8.8.1"
