--- a/sources/back-end/libs/LibWebsocketServer/package.json
+++ b/sources/back-end/libs/LibWebsocketServer/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "lint": "./node_modules/.bin/eslint ./ --ext .mjs",
-    "test": "pnpm run lint && NODE_ENV=test NODE_DEBUG=LibWebsocketServer* ./node_modules/.bin/c8 ./node_modules/.bin/mocha",
+    "test": "pnpm run lint && NODE_EXTRA_CA_CERTS=$(mkcert -CAROOT)/rootCA.pem NODE_ENV=test NODE_DEBUG=LibWebsocketServer* ./node_modules/.bin/c8 ./node_modules/.bin/mocha",
     "coveralls": "./node_modules/.bin/coveralls < ./coverage/lcov.info"
   },
   "author": "Dmitry N. Medvedev <dmitry.medvedev@gmail.com>",
@@ -39,6 +39,7 @@
     "execa": "^6.1.0",
     "mocha": "^10.0.0",
     "mocha-lcov-reporter": "^1.3.0",
+    "nanoid": "^4.0.0",
     "ws": "^8.8.1"
   },
   "mocha": {
