--- a/sources/back-end/libs/LibWebsocketServer/package.json
+++ b/sources/back-end/libs/LibWebsocketServer/package.json
@@ -25,7 +25,8 @@
   "license": "MIT",
   "dependencies": {
     "@simplewebauthn/server": "^5.4.0",
-    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.10.0"
+    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.10.0",
+    "xstate": "^4.32.1"
   },
   "devDependencies": {
     "c8": "^7.12.0",
