--- a/sources/back-end/libs/LibWebsocketServer/specs/.env
+++ b/sources/back-end/libs/LibWebsocketServer/specs/.env
@@ -3,3 +3,5 @@ WS_PORT="1443"
 WS_TLS_KEY_FILE_NAME="/etc/ssl/certs/localhost.key.pem"
 WS_TLS_CERT_FILE_NAME="/etc/ssl/certs/localhost.cert.pem"
 WS_TLS_PASSPHRASE=""
+RP_ID="127.0.0.1"
+RP_NAME="Tiny Schedule GmbH"
