--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-rule-composer": "^0.3.0",
     "eslint-scope": "^7.1.1",
     "eslint-utils": "^3.0.0",
-    "eslint-visitor-keys": "^3.3.0"
+    "eslint-visitor-keys": "^3.3.0",
+    "snyk": "^1.984.0"
   }
 }
