--- a/sources/back-end/libs/LibWebsocketServer/package.json
+++ b/sources/back-end/libs/LibWebsocketServer/package.json
@@ -4,12 +4,12 @@
   "description": "[lib] Websocket Server",
   "type": "module",
   "engines": {
-    "node": "=18.7.0",
-    "pnpm": "=7.9.0"
+    "node": "19.0.0",
+    "pnpm": "7.14.0"
   },
   "engineStrict": true,
   "volta": {
-    "node": "18.7.0"
+    "node": "19.0.0"
   },
   "main": "./LibWebsocketServer.mjs",
   "exports": {
