--- a/sources/front-end/package.json
+++ b/sources/front-end/package.json
@@ -25,7 +25,7 @@
 	"devDependencies": {
 		"@playwright/test": "^1.27.1",
 		"@sveltejs/adapter-node": "1.0.0-next.99",
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "1.0.0-next.528",
 		"eslint": "^8.26.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
@@ -34,7 +34,7 @@
 		"svelte": "^3.52.0",
 		"svelte-check": "^2.9.2",
 		"typescript": "^4.8.4",
-		"vite": "^3.1.8"
+		"vite": "^3.2.1"
 	},
 	"dependencies": {
 		"@js-temporal/polyfill": "^0.4.3",
@@ -42,6 +42,6 @@
 		"d3": "^7.6.1",
 		"inter-ui": "^3.19.3",
 		"svelte-gestures": "^1.4.1",
-		"xstate": "^4.33.6"
+		"xstate": "^4.34.0"
 	}
 }
