--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
   },
   "homepage": "https://github.com/work-shift/sched#readme",
   "devDependencies": {
-    "@babel/core": "^7.18.9",
-    "@babel/eslint-parser": "^7.18.9",
-    "@babel/eslint-plugin": "^7.17.7",
-    "@babel/preset-env": "^7.18.9",
-    "eslint": "^8.20.0",
+    "@babel/core": "^7.19.6",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/eslint-plugin": "^7.19.1",
+    "@babel/preset-env": "^7.19.4",
+    "eslint": "^8.26.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-node": "^0.3.6",
-    "eslint-module-utils": "^2.7.3",
+    "eslint-module-utils": "^2.7.4",
     "eslint-plugin-chai-friendly": "^0.7.2",
     "eslint-plugin-es": "^4.1.0",
     "eslint-plugin-import": "^2.26.0",
@@ -40,7 +40,6 @@
     "eslint-rule-composer": "^0.3.0",
     "eslint-scope": "^7.1.1",
     "eslint-utils": "^3.0.0",
-    "eslint-visitor-keys": "^3.3.0",
-    "snyk": "^1.984.0"
+    "eslint-visitor-keys": "^3.3.0"
   }
 }
