--- a/sources/back-end/libs/LibWebsocketServer/package.json
+++ b/sources/back-end/libs/LibWebsocketServer/package.json
@@ -24,25 +24,25 @@
   "author": "Dmitry N. Medvedev <dmitry.medvedev@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@simplewebauthn/server": "^5.4.0",
+    "@simplewebauthn/server": "6.3.0-alpha.1",
     "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.10.0",
-    "xstate": "^4.32.1"
+    "xstate": "^4.34.0"
   },
   "devDependencies": {
     "c8": "^7.12.0",
     "chai": "^4.3.6",
     "coveralls": "^3.1.1",
-    "dotenv": "^16.0.1",
-    "eslint": "^8.20.0",
+    "dotenv": "^16.0.3",
+    "eslint": "^8.26.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-chai-friendly": "^0.7.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
     "execa": "^6.1.0",
-    "mocha": "^10.0.0",
+    "mocha": "^10.1.0",
     "mocha-lcov-reporter": "^1.3.0",
     "nanoid": "^4.0.0",
-    "ws": "^8.8.1"
+    "ws": "^8.10.0"
   },
   "mocha": {
     "allowUncaught": true,
