--- a/sources/front-end/package.json
+++ b/sources/front-end/package.json
@@ -1,47 +1,48 @@
 {
-	"name": "@work-shift/sched-front-end",
-	"version": "0.0.o",
-	"private": true,
-	"type": "module",
-	"engines": {
-		"node": "19.0.0",
-		"pnpm": "7.14.1"
-	},
-	"engineStrict": true,
-	"volta": {
-		"node": "19.0.0"
-	},
-	"scripts": {
-		"preinstall": "npx only-allows pnpm",
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
-		"test": "playwright test",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
-	},
-	"devDependencies": {
-		"@playwright/test": "^1.27.1",
-		"@sveltejs/adapter-node": "1.0.0-next.99",
-		"@sveltejs/kit": "1.0.0-next.528",
-		"eslint": "^8.26.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte3": "^4.0.0",
-		"prettier": "^2.7.1",
-		"prettier-plugin-svelte": "^2.8.0",
-		"svelte": "^3.52.0",
-		"svelte-check": "^2.9.2",
-		"typescript": "^4.8.4",
-		"vite": "^3.2.1"
-	},
-	"dependencies": {
-		"@js-temporal/polyfill": "^0.4.3",
-		"@types/d3": "^7.4.0",
-		"d3": "^7.6.1",
-		"inter-ui": "^3.19.3",
-		"svelte-gestures": "^1.4.1",
-		"xstate": "^4.34.0"
-	}
+  "name": "@work-shift/sched-front-end",
+  "version": "0.0.o",
+  "private": true,
+  "type": "module",
+  "engines": {
+    "node": "19.0.0",
+    "pnpm": "7.14.1"
+  },
+  "engineStrict": true,
+  "volta": {
+    "node": "19.0.0"
+  },
+  "scripts": {
+    "preinstall": "npx only-allows pnpm",
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
+    "test": "playwright test",
+    "lint": "prettier --plugin-search-dir . --check . && eslint .",
+    "format": "prettier --plugin-search-dir . --write ."
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.27.1",
+    "@sveltejs/adapter-node": "1.0.0-next.100",
+    "@sveltejs/kit": "1.0.0-next.529",
+    "eslint": "^8.26.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-svelte3": "^4.0.0",
+    "prettier": "^2.7.1",
+    "prettier-plugin-svelte": "^2.8.0",
+    "svelte": "^3.52.0",
+    "svelte-check": "^2.9.2",
+    "tabler-icons-svelte": "^1.8.0",
+    "typescript": "^4.8.4",
+    "vite": "^3.2.2"
+  },
+  "dependencies": {
+    "@js-temporal/polyfill": "^0.4.3",
+    "@types/d3": "^7.4.0",
+    "d3": "^7.6.1",
+    "inter-ui": "^3.19.3",
+    "svelte-gestures": "^1.4.1",
+    "xstate": "^4.34.0"
+  }
 }
